schema/testdata/validation_relationships_one_to_one_relation_field_not_exists/schema.keel
model User {
    fields {
        student Student {
            @unique
            @relation(nope)
        }
        student2 Student {
            @unique
            @relation(user2)
        }
    }
}

model Student {
    fields {
        user User
        user2 User
    }
}
