schema/testdata/errors/relationships_one_to_one_relation_field_not_exists.keel
model User {
    fields {
        student Student {
            @unique
            //expect-error:23:27:RelationshipError:The field 'nope' does not exist on Student
            @relation(nope)
        }
        student2 Student {
            @unique
            @relation(user2)
        }
    }
}

model Student {
    fields {
        user User
        user2 User
    }
}
